Fixes the bug where book covers wouldn't update due to field name mismatch (image vs image_url) and resolves the "18 borrowed books" ghost counter by recalculating from the active book list.

--- a/Client/client_app/templates/client_app/books_list.html
+++ b/Client/client_app/templates/client_app/books_list.html
@@ -216,7 +216,7 @@
                     <td class="ps-4">
                         <div class="d-flex align-items-center">
                             {% if book.image_url %}
-                                <img src="/media/{{ book.image_url }}" class="book-cover-mini me-3">
+                                <img src="/media/{{ book.image_url }}?v={% now 'U' %}" class="book-cover-mini me-3">
                             {% else %}
                                 <div class="bg-light rounded me-3 d-flex align-items-center justify-content-center" style="width:55px; height:75px; font-size: 1.5rem;">📖</div>
                             {% endif %}
